gitops/apps/fluxbaan/deploy/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxbaan-backend
  namespace: fluxbaan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluxbaan-backend
  template:
    metadata:
      labels:
        app: fluxbaan-backend
    spec:
      serviceAccountName: fluxbaan-backend
      containers:
      - name: backend
        image: registry.talos-tart-ha.talos-on-macos.com/fluxbaan-backend:sha-07b7840a710e3d8551f429b7b3a0611f1a2311c1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fluxbaan-backend
  namespace: fluxbaan
spec:
  selector:
    app: fluxbaan-backend
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluxbaan-frontend
  namespace: fluxbaan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluxbaan-frontend
  template:
    metadata:
      labels:
        app: fluxbaan-frontend
    spec:
      containers:
      - name: frontend
        image: registry.talos-tart-ha.talos-on-macos.com/fluxbaan-frontend:sha-bda93fafbe4418a2d61feafd1c37c6ed477de113
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: fluxbaan-frontend
  namespace: fluxbaan
spec:
  selector:
    app: fluxbaan-frontend
  ports:
  - port: 80
    targetPort: 3000
