gitops/apps/fluxbaan/deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fluxbaan
  namespace: fluxbaan
spec:
  parentRefs:
    - name: main-gateway
      namespace: networking
  hostnames:
    - "fluxbaan.talos-tart-ha.talos-on-macos.com"
  rules:
    - backendRefs:
        - name: fluxbaan-frontend
          port: 80
